// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> components/base/fetchChanges.tsx --- Snapshot +++ Should match snapshot there are no changes in master 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root FetchChangesComponent-clickable-3 FetchChangesComponent-btn-2 MuiButton-text"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <i
          className="fa fa-download"
          style={
            Object {
              "color": "#0062BA",
              "fontSize": 36,
              "fontWeight": null,
              "margin": "0px -5px 0px -5px",
              "padding": null,
            }
          }
        />
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <p
          className="MuiTypography-root FetchChangesComponent-color_blueDark-4 MuiTypography-body1"
          id="fetch_changes_btn"
        >
          sync_header.fetch_changes
        </p>
      </div>
    </div>
  </span>
</button>
`;

exports[`>>> components/base/fetchChanges.tsx --- Snapshot +++ Should match snapshot when changes in master 1`] = `
<button
  className="MuiButtonBase-root MuiButton-root FetchChangesComponent-clickable-3 FetchChangesComponent-btn-2 MuiButton-text"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  tabIndex={0}
  type="button"
>
  <span
    className="MuiButton-label"
  >
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <i
          className="fa fa-download"
          style={
            Object {
              "color": "#0062BA",
              "fontSize": 36,
              "fontWeight": 600,
              "margin": "0px -5px 0px -5px",
              "padding": null,
            }
          }
        />
      </div>
      <div
        className="MuiGrid-root MuiGrid-item"
      >
        <p
          className="MuiTypography-root FetchChangesComponent-color_blueDark-4 FetchChangesComponent-bold-1 MuiTypography-body1"
          id="fetch_changes_btn"
        >
          sync_header.fetch_changes
        </p>
      </div>
    </div>
  </span>
</button>
`;
